# zero2prod

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  spec.yaml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
migrations/: 20221229183133_make_status_not_null_in_subscriptions.sql  20221229184132_create_subscription_tokens_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs  test.rs
src/route/: error.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/route/admin/: dashboard.rs  logout.rs  mod.rs
src/route/admin/password/: get.rs  post.rs
src/route/home/: home.html  mod.rs
src/route/login/: error.html  get.rs  login.html  mod.rs  post.rs
src/tests/: health_check.rs  mod.rs  test_util.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs  test_util.rs
