[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.2.1"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-session = { version = "0.6", features = ["redis-rs-tls-session"] }
argon2 = { version = "0.4", features = ["std"] }
anyhow = "1"
base64 = "0.13"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
config = "0.13"
htmlescape = "0.3"
hmac = { version = "0.12", features = ["std"] }
rand = { version = "0.8", features=["std_rng"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"]}
serde-aux = "3"
serde_json = "1"
thiserror = "1"
tokio = { version = "1.20.3", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.6"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
urlencoding = "2"
unicode-segmentation = "1.10.0"
uuid = { version = "1", features = ["v4", "serde"] }
validator = "0.14"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dependencies.sqlx] 
version = "0.6" 
default-features = false 
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dev-dependencies]
fake = "~2.3"
linkify = "0.8"
once_cell = "1"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
reqwest = "0.11.12"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
